@@ -18,13 +18,20 @@ and can be useful for processing Subversion repositories into a form
 suitable for conversion. Also, it supports the version 3 dumpfile
 format, which reposurgeon does not.
 
-In all commands, the -r (or --range) option limits the selection
-of revisions over which an operation will be performed. Usually it
-behaves like an implied select on the revision output range. A selection
-consists of one or more comma-separated ranges. A range may consist of
-an integer revision number or the special name HEAD for the head
-revision. Or it may be a colon-separated pair of integers, or an
-integer followed by a colon followed by HEAD.
+In all commands, the -r (or --range) option limits the selection of
+revisions over which an operation will be performed. Usually other
+revisions will be passed through unaltered, except in the select and
+deselect commands for which the option controls whicjh revisions will be
+passed through. A selection consists of one or more comma-separated
+ranges. A range may consist of an integer revision number or the
+special name HEAD for the head revision. Or it may be a
+colon-separated pair of integers, or an integer followed by a colon
+followed by HEAD.
+
+(Older versions of this tool, before 4.30, treated -r as an implied
+selection filter rather than passing through unselected revisions
+unaltered. If you have old scripts using repocutter they may need
+nodification.)
 
 Normally, each subcommand produces a progress spinner on standard
 error; each turn means another revision has been filtered. The -q (or
