@@ -4,6 +4,7 @@ Repository head::
      Speed up DoTagify by parallelizing it.
      =J selection gets all commmits and tags with non-ASCII metadata
      Added msgin --relax option.
+     On most subcommands repocutter -r restricts which commits are transformed.
 
 4.29: 2021-09-08::
      Added swapsvn subcommand to repocutter.
